# opengl-learn

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/ide_xp/: visual_studio.cmake
res/: simple_2d_geo_shader.frag  simple_2d_geo_shader.vert
src/: main.cxx  main_old.cxx  stdafx.h  subsys.h
src/graph/: graph_subsys.cxx  graph_subsys.hxx  igraph_obj.cxx  igraph_obj.hxx  igraph_obj_itfc.cxx  igraph_obj_variant.cxx  screen_plane_graph_obj.cxx  screen_plane_graph_obj.hxx  std_3d_vertices_based_graph_obj.cxx  std_3d_vertices_based_graph_obj.hxx  vertex.cxx  vertex.hxx
src/graph/3rdparty_wrapper/: dear_imgui.cxx  dear_imgui.hxx  opengl.cxx  opengl.hxx
src/graph/Excp/: shader_compile_failed_excp.hxx  vertex_format_error_excp.hxx
src/graph/Pojo/: mesh.cxx  mesh.hxx  mesh_inst.cxx  mesh_inst.hxx  vertex.hxx
src/graph/Serv/: graph_api_serv.cxx  graph_api_serv.hxx
src/graph/Trash/: main_screen_fb_plane_graph_obj.cxx  main_screen_fb_plane_graph_obj.hxx
src/graph/Trash/20240816/: graph_subsys.cxx  graph_subsys.hxx  igraph_obj_itfc.hxx  igraph_obj_variant.hxx  std_3d_vertices_based_graph_obj.cxx  std_3d_vertices_based_graph_obj.hxx  vert_array_drawer.cxx  vert_array_drawer.hxx
src/graph/rendering/: irenderer_itfc.cxx  irenderer_itfc.hxx  irenderer_variant.cxx  irenderer_variant.hxx  simple_2d_geo_renderer.cxx  simple_2d_geo_renderer.hxx
src/platform/: terminal.cxx  terminal.hxx
subprojects/essentials/: CMakeLists.txt
subprojects/essentials/src/essentials/: def.hxx  excp.cxx  excp.hxx  file.cxx  file.hxx  panic.cxx  panic.hxx  ref.inl
subprojects/essentials/src/essentials/math/: random.cxx  random.hxx
subprojects/essentials/src/essentials/memory/: static_obj_holder.cxx  static_obj_holder.hxx  static_obj_ref.cxx  static_obj_ref.hxx
subprojects/essentials/src/essentials/platform/: platform_headers.h  terminal.cxx
